# test-bot

./: Dockerfile  Dockerfile.debug  Dockerfile.ui  cli.rs  core_command.rs  docker-compose.override.yml  docker-compose.yml  hp_network_layer.rs  hp_rpc_client.rs  hpa.rs  hpt_execution_engine.rs  init-basic.bat  init-project.bat  install-solana-admin.bat  install-solana-elevated.ps1  install-solana.bat  install-solana.ps1  package-lock.json  package.json  project_intialization.sh  prometheus.yml  rtt_screening.rs  sim_risk.rs  tailwind.config.js  tsconfig.json  vendor-jito-dependencies.ps1  vendor-jito-dependencies.sh
Additional Documentation/: # Prompts for Cline with Claude 3.7.txt  DEPENDENCY_MANAGEMENT.md  DOCKER.md  Dependency_Issue_Solutions.md  Final_Implementation_Plan.md  IMPLEMENTATION_PROGRESS.md  INTEGRATION.md  JITO_API_IMPLEMENTATION.md  JITO_INTEGRATION_DEPENDENCY_ISSUES.md  JITO_INTEGRATION_DOCUMENTATION.md  JITO_INTEGRATION_FIXES.md  JITO_INTEGRATION_GUIDE.md  JITO_INTEGRATION_IMPLEMENTATION_PLAN.md  JITO_INTEGRATION_SUMMARY.md  Jito_Dependency_Alternatives.md  Jito_Dependency_Solution_Summary.md  Jito_Integration_Issues_Summary.md  Memory_Management_Optimization_Summary.md  NEXT_STEPS_IMPLEMENTATION_SUMMARY.md  Next_Steps_Recommendations.md  Optimized_Memory_Management.md  Optimized_Memory_Pool_Implementation.md  Solana_HFT_Bot_Architecture.md
Additional Documentation/anchor-documentation/: README.md  organization_plan.md
Additional Documentation/anchor_docs/: README.md  anchor_knowledge_update.ts  download_specific_pages.sh  improved_docs_script.sh  index.ts.update  install_to_mcp.sh  knowledge.ts.update  organization_plan.md  organize_files.bat  organize_files.sh  simple_download.sh
Additional Documentation/docs-scraper/: documentation-server.js  package.json
public/: index.html  manifest.json
scripts/docker/: backup.bat  monitor.bat  restore.bat  security-scan.bat
solana-hft-bot/: Cargo.toml  JITO_SHREDSTREAM_IMPLEMENTATION.md  README.md  SIMD_IMPLEMENTATION_PLAN.md  SIMD_OPTIMIZATION_DOCUMENTATION.md  config-test.json  config.json  install.bat  install.sh  logging-config.json  metrics-config.json  replace_placeholders.rs  run-simd-benchmarks.ps1  run-simd-benchmarks.sh  simulation.rs  test-memory-pool.ps1  test-with-jito-full.ps1  test-with-jito-full.sh  test-with-jito.ps1  test-with-jito.sh  test-without-jito.ps1  test-without-jito.sh
solana-hft-bot/crates/arbitrage/: Cargo.toml
solana-hft-bot/crates/arbitrage/src/: lib.rs
solana-hft-bot/crates/arbitrage/src/config/: mod.rs
solana-hft-bot/crates/arbitrage/src/dexes/: jupiter.rs  mod.rs  openbook.rs  orca.rs  raydium.rs
solana-hft-bot/crates/arbitrage/src/flash_loan/: mango.rs  mod.rs  solend.rs
solana-hft-bot/crates/arbitrage/src/graph/: mod.rs
solana-hft-bot/crates/arbitrage/src/metrics/: mod.rs
solana-hft-bot/crates/arbitrage/src/paths/: mod.rs
solana-hft-bot/crates/arbitrage/src/pools/: mod.rs
solana-hft-bot/crates/arbitrage/src/pricing/: mod.rs
solana-hft-bot/crates/arbitrage/src/protocols/: detection.rs  identifiers.rs  mod.rs  opportunity.rs
solana-hft-bot/crates/arbitrage/src/simulation/: mod.rs  tests.rs
solana-hft-bot/crates/arbitrage/src/strategies/: circular.rs  cross_exchange.rs  mod.rs  protocol_aware.rs  triangular.rs
solana-hft-bot/crates/cli/: Cargo.toml
solana-hft-bot/crates/cli/src/: display.rs  interactive.rs  main.rs  utils.rs
solana-hft-bot/crates/config/: Cargo.toml
solana-hft-bot/crates/config/src/: error.rs  hardware.rs  lib.rs  loader.rs  manager.rs  network.rs  profiles.rs  schema.rs  utils.rs
solana-hft-bot/crates/core/: Cargo.toml
solana-hft-bot/crates/core/src/: bot.rs  config.rs  lib.rs  metrics.rs  performance.rs  signals.rs  stats.rs  status.rs  strategies.rs  types.rs
solana-hft-bot/crates/execution/: Cargo.toml
solana-hft-bot/crates/execution/src/: config.rs  fee_prediction.rs  hardware.rs  jito.rs  jito_mock.rs  jito_optimizer.rs  jito_optimizer_mock.rs  lib.rs  memory_pool_test.rs  metrics.rs  multi_path.rs  order.rs  parallel.rs  priority.rs  queue.rs  retry.rs  shredstream.rs  simd.rs  simd_benchmark.rs  simulation.rs  strategies.rs  transaction_builder.rs  vault.rs
solana-hft-bot/crates/logging/: Cargo.toml  README.md
solana-hft-bot/crates/logging/src/: analysis.rs  context.rs  examples.rs  lib.rs  mod.rs  timing.rs
solana-hft-bot/crates/metrics/: Cargo.toml
solana-hft-bot/crates/metrics/src/: lib.rs
solana-hft-bot/crates/monitoring/: Cargo.toml
solana-hft-bot/crates/monitoring/src/: lib.rs
solana-hft-bot/crates/network/: Cargo.toml
solana-hft-bot/crates/network/src/: bypass.rs  config.rs  dpdk.rs  dpdk_enhanced.rs  io_uring.rs  lib.rs  socket.rs  socket_enhanced.rs  timestamps.rs  topology.rs  zero_copy.rs
solana-hft-bot/crates/network/src/memory/: hugepages.rs  mod.rs  numa.rs
solana-hft-bot/crates/network/src/metrics/: latency.rs  mod.rs  throughput.rs
solana-hft-bot/crates/network/src/protocol/: mod.rs  solana.rs  websocket.rs
solana-hft-bot/crates/risk/: Cargo.toml
solana-hft-bot/crates/risk/src/: circuit_breakers.rs  config.rs  dynamic_adjustment.rs  enhanced_circuit_breakers.rs  lib.rs  metrics.rs  models.rs  multi_factor_models.rs  solana_specific.rs  stress_testing.rs
solana-hft-bot/crates/rpc/: Cargo.toml
solana-hft-bot/crates/rpc/src/: batch.rs  cache.rs  config.rs  endpoints.rs  lib.rs  metrics.rs  monitor.rs  proxy.rs  rate_limiter.rs  request.rs  websocket.rs
solana-hft-bot/crates/screening/: Cargo.toml
solana-hft-bot/crates/screening/src/: config.rs  dexes.rs  filters.rs  lib.rs  metrics.rs  rug_protection.rs  scoring.rs  subscription.rs  token.rs
solana-hft-bot/crates/security/: Cargo.toml
solana-hft-bot/crates/security/src/: hsm.rs  lib.rs  secure_comms.rs
src/: App.tsx  index.tsx
src/api/: assets.ts  client.ts  positions.ts  strategies.ts  system.ts  websocket.ts
src/pages/: Assets.tsx  Overview.tsx  Performance.tsx  Positions.tsx  Settings.tsx  Strategies.tsx
src/store/: assetStore.ts  notificationStore.ts  positionStore.ts  strategyStore.ts  systemStore.ts  (+1 more)
(+57 files in other folders)
