[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/network",
    "crates/execution",
    "crates/arbitrage",
    "crates/monitoring",
    "crates/screening",
    "crates/risk",
    "crates/rpc",
    "crates/security",
    "crates/metrics",
    "crates/logging",
    "crates/cli"
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36.0", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["full"] }
futures = "0.3.30"

# Solana client libraries
solana-client = "=1.17.20"
solana-sdk = "=1.17.20"
solana-transaction-status = "=1.17.20"
solana-program = "=1.17.20"
solana-account-decoder = "=1.17.20"
solana-rpc = "=1.17.20"

# Jito MEV libraries - using specific commits for compatibility
jito-tip-distribution = { git = "https://github.com/jito-foundation/jito-solana.git", rev = "d7f139c", package = "solana-tip-distributor" }
jito-bundle = { git = "https://github.com/jito-labs/jito-rust-rpc.git", rev = "81ebd23", package = "jito-sdk-rust" }
jito-searcher-client = { git = "https://github.com/jito-labs/searcher-examples.git", rev = "51fb639", package = "jito-searcher-client" }
jito-shredstream-proxy = { git = "https://github.com/jito-labs/shredstream-proxy.git", branch = "master", package = "jito-shredstream-proxy" }

# Network optimizations
io-uring = "0.6.3"
socket2 = { version = "0.5.5", features = ["all"] }
dpdk-sys = "0.1.5"  # Updated to latest available version
etherparse = "0.13.0"
mio = "0.8.10"

# Cryptography
ed25519-dalek = "2.1.1"
curve25519-dalek = { version = "4.1.1", features = ["digest", "legacy_compatibility"] }
ring = "0.17.7"
sha2 = "0.10.8"
hmac = "0.12.1"
rand = "0.8.5"
zeroize = "1.7.0"

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
bincode = "1.3.3"
borsh = "1.3.1"

# Logging and metrics
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
prometheus = "0.13.3"
prometheus-static-metric = "0.5.1"

# Error handling
thiserror = "1.0.56"
anyhow = "1.0.79"

# Utilities
dashmap = "5.5.3"
parking_lot = "0.12.1"
rayon = "1.8.1"
hashbrown = "0.14.3"
crossbeam = "0.8.4"
itertools = "0.12.1"
num_cpus = "1.16.0"
chrono = { version = "0.4.33", features = ["serde"] }
async-trait = "0.1.77"
config = "0.13.4"
once_cell = "1.19.0"
bytes = "1.5.0"
smallvec = { version = "1.13.1", features = ["const_generics", "union", "write"] }

[workspace.features]
default = []
jito = ["jito-tip-distribution", "jito-bundle", "jito-searcher-client"]
jito-full = ["jito", "jito-shredstream-proxy"]

[workspace.lints.rust]
unsafe_code = "allow"  # Needed for performance optimizations

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true  # Keep debug symbols for profiling
strip = false

[profile.dev]
opt-level = 0
debug = true

# Profile for benchmarking and testing with some optimizations
[profile.bench]
opt-level = 3
debug = true

# Patch section to resolve dependency conflicts
[patch.crates-io]
ahash = { git = "https://github.com/tkaitchuck/ahash.git", tag = "v0.8.11" }

# Add a specific patch for the version used by jito-protos
[patch."https://github.com/jito-labs/searcher-examples.git"]
ahash = { git = "https://github.com/tkaitchuck/ahash.git", tag = "v0.8.11" }

