[package]
name = "solana-hft-cli"
version = "0.1.0"
edition = "2021"
description = "Solana HFT Bot - CLI module"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/solana-hft-bot"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full", "signal"] }
futures = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.4.18", features = ["derive"] }
config = { workspace = true }
chrono = { workspace = true }

# CLI specific dependencies
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.8"
rustyline = "13.0.0"
tabled = "0.15.0"
serde_yaml = "0.9.32"

# Add dependencies to other crates in the workspace
solana-hft-core = { path = "../core" }
solana-hft-network = { path = "../network" }
solana-hft-execution = { path = "../execution" }
solana-hft-arbitrage = { path = "../arbitrage" }
solana-hft-monitoring = { path = "../monitoring" }
solana-hft-screening = { path = "../screening" }
solana-hft-risk = { path = "../risk" }
solana-hft-rpc = { path = "../rpc" }
solana-hft-security = { path = "../security" }
solana-hft-metrics = { path = "../metrics" }

[[bin]]
name = "solana-hft-bot"
path = "src/main.rs"