[package]
name = "solana-hft-config"
version = "0.1.0"
edition = "2021"
description = "Configuration system for Solana HFT Bot"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
num_cpus = "1.15"
sysinfo = "0.29"
tokio = { version = "1.28", features = ["full"] }
once_cell = "1.18"