[package]
name = "solana-hft-core"
version = "0.1.0"
edition = "2021"
description = "Solana HFT Bot - core module"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/solana-hft-bot"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-program = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

# Internal crate dependencies
solana-hft-network = { path = "../network" }
solana-hft-rpc = { path = "../rpc" }
solana-hft-execution = { path = "../execution", features = [] }
solana-hft-screening = { path = "../screening" }
solana-hft-arbitrage = { path = "../arbitrage" }
solana-hft-risk = { path = "../risk" }

[features]
default = []
jito = ["solana-hft-execution/jito"]