[package]
name = "solana-hft-logging"
version = "0.1.0"
edition = "2021"
description = "Comprehensive logging system for the Solana HFT Bot"

[dependencies]
# Workspace dependencies
solana-hft-core = { path = "../core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

# Additional dependencies for advanced logging
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.22.0"
opentelemetry = { version = "0.21.0" }
opentelemetry-otlp = "0.14.0"
tracing-flame = "0.2.0"
console-subscriber = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
tracing-json = "0.1.0"
tracing-timing = "0.6.0"
tracing-tree = "0.3.0"
tracing-error = "0.2.0"
color-eyre = "0.6.2"
tower-http = { version = "0.4.4", features = ["trace"] }
reqwest-tracing = "0.4.6"
reqwest = { version = "0.11.23", features = ["json"] }
async-trait = { workspace = true }
log = "0.4.20"
log-mdc = "0.1.0"
log4rs = "1.2.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
rand = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
metrics-util = "0.15.1"
metrics-tracing-context = "0.14.0"