[package]
name = "solana-hft-network"
version = "0.1.0"
edition = "2021"
description = "Solana HFT Bot - network module"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/solana-hft-bot"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
socket2 = { workspace = true }
crossbeam = { workspace = true }
num_cpus = { workspace = true }

# Crate-specific dependencies
io-uring = { version = "0.6.3", optional = true }
dpdk-sys = { version = "0.1.5", optional = true }
etherparse = { workspace = true }
mio = { workspace = true }

[features]
default = []
kernel-bypass = ["dep:io-uring", "dep:dpdk-sys"]
simd = []  # Enable SIMD optimizations
