[package]
name = "solana-hft-risk"
version = "0.1.0"
edition = "2021"
description = "Risk management module for Solana HFT Bot"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.4"
futures = "0.3"
log = "0.4"
parking_lot = "0.12"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.16"
solana-program = "1.16"
solana-sdk = "1.16"
solana-transaction-status = "1.16"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"] }

# New dependencies for enhanced risk management
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5"
statrs = "0.16"
getrandom = "0.2"

# Internal dependencies
solana-hft-core = { path = "../core" }

[dev-dependencies]
tokio-test = "0.4"