[package]
name = "solana-hft-rpc"
version = "0.1.0"
edition = "2021"
description = "Solana HFT Bot - RPC client module"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/solana-hft-bot"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }

# Crate-specific dependencies
reqwest = { version = "0.11.24", features = ["json"] }

[features]
default = []
simd = []  # Enable SIMD optimizations
